feat: complete product CRUD, stock management, and frontend pages fixes